--- a/home/templates/userside/main.html
+++ b/home/templates/userside/main.html
@@ -155,6 +155,11 @@
 
                 {% endblock corousel%}
             </div>
+            <div class="col-lg-3">
+                {%block right %}
+                {% endblock right %}
+
+            </div>
         </div>
     </div>
     <!-- Navbar End -->
