--- a/home/templates/profilebase.html
+++ b/home/templates/profilebase.html
@@ -25,12 +25,12 @@
             <!-- Left Side - Buttons -->
             <div class="col-lg-4 ">
                 <div class="left-buttons p-3">
-                    <button class="btn btn-primary btn-block mb-3">My Profile</button>
-                    <button class="btn btn-primary btn-block mb-3">My Address</button>
-                    <button class="btn btn-primary btn-block mb-3">My Password</button>
-                    <button class="btn btn-primary btn-block mb-3">My Orders</button>
+                    <a id="profileBtn" href="{% url 'user_profile' %}"class="btn btn-primary btn-block mb-3">My Profile</a>
+                    <a id="addressBtn" href="{% url 'user_address' %}" class="btn btn-primary btn-block mb-3">My Address</a>
+                    <a id="passwordBtn"  class="btn btn-primary btn-block mb-3">My Password</a>
+                    <a id="ordersBtn" class="btn btn-primary btn-block mb-3">My Orders</a>
                    
-                    <button class="btn btn-primary btn-block mb-3">My Wallet</button>
+                    <a id="walletBtn" class="btn btn-primary btn-block mb-3">My Wallet</a>
                    
                 </div>
             </div>
@@ -39,32 +39,31 @@
                 <div class="col text-center">
                     {% block profilehead %}  {% endblock profilehead %}
                 </div>
-                <div></div>
-                <form method="POST" action="{% url 'user_address' %}"class="col-lg-12 border-custom rounded p-3 d-flex flex-column align-items-center">
-                    {% csrf_token %}
-                    
-                    <div class="form-group col-11">
-                        <label for="inputName">Name</label>
-                        <input type="text" class="form-control custom-input" id="inputName" name="name" value="{{us.name}}">
-                    </div>
-                    <div class="form-group col-11">
-                        <label for="inputName">Phone Number</label>
-                        <input type="text" class="form-control custom-input" id="inputNumber" name="number" value="{{us.phone_number}}" >
-                    </div>
-                    <div class="form-group col-11">
-                        <label for="inputEmail">Email</label>
-                        <input type="email" class="form-control custom-input" id="inputEmail" name="email" value="{{us.email}}">
-                    </div>
-                    <button href="{% url 'user_address' %}" type="submit" class="btn btn-primary ">Submit</button>
-                </form>
-            </div>
+                <div>
+                    {% block form%}  {% endblock form%}
+            </div></div>
         </div>
     </div>
+
+<script>
+    // Get the current URL pathname
+    var path = window.location.pathname;
+
+    // Check which button corresponds to the current page and add the 'active' class to it
+    if (path.includes("myprofile/")) {
+        document.getElementById("profileBtn").classList.add("active");
+    } else if (path.includes("user_address/")) {
+        console.log("address clicked");
+        document.getElementById("addressBtn").classList.add("active");
+    } else if (path.includes("user_password/")) {
+        document.getElementById("passwordBtn").classList.add("active");
+    } else if (path.includes("user_orders/")) {
+        document.getElementById("ordersBtn").classList.add("active");
+    } else if (path.includes("user_wallet/")) {
+        document.getElementById("walletBtn").classList.add("active");
+    }
+</script>
     {% endblock corousel %}
     {% block right %}
-    <div class="row mt-5">
-   </div>
-   <div class="row mt-5 ml-3" style="background-color:#D19C97;width:100%;height:80%;">
-</div>
-
+  
     {% endblock right %}
