--- a/home/templates/userside/main.html
+++ b/home/templates/userside/main.html
@@ -58,7 +58,7 @@
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-dark px-2" href="">
+                    <a class="text-dark px-2" href="{% url 'user_address' %}">
                         <i class="fab fa-twitter"></i>
                     </a>
                     <a class="text-dark px-2" href="">
@@ -94,7 +94,7 @@
                 </form>
             </div>
             <div class="col-lg-3 col-6 text-right">
-                <a href="{% url 'user_address' %}" class="btn border"> 
+                <a href="{% url 'user_profile' %}" class="btn border"> 
                     <span class="material-symbols-outlined text-primary">
                         account_circle
                         </span> </a>
