--- a/home/templates/userside/userprofile.html
+++ b/home/templates/userside/userprofile.html
@@ -1,45 +1,9 @@
-{% extends 'main.html'%}
-{% block corousel %}
-<style>
-    .border-custom {
-        border-width: 1px; /* Adjust the border width as needed */
-        border-style: solid;
-        border-radius: 70%;
-    }
-    .input {
-        display: block;
-        text-align: center;
-    }
-    .custom-input{
-        background-color: rgb(239, 231, 231);
-        color: black;
-    }
-</style>
+{% extends 'profilebase.html'%}
 
-    <div class="container" style="margin-left: auto; margin-right: auto;">
-        <div class="row mt-5 ">
-
-
-        </div>
-        <div class="row justify-content-between">
-            <!-- Left Side - Buttons -->
-            <div class="col-lg-4 ">
-                <div class="left-buttons p-3">
-                    <button class="btn btn-primary btn-block mb-3">My Profile</button>
-                    <button class="btn btn-primary btn-block mb-3">My Address</button>
-                    <button class="btn btn-primary btn-block mb-3">My Password</button>
-                    <button class="btn btn-primary btn-block mb-3">My Orders</button>
-                   
-                    <button class="btn btn-primary btn-block mb-3">My Wallet</button>
-                   
-                </div>
-            </div>
-            <!-- Right Side - Form -->
-            <div class="col-lg-7 ml-4 ">
-                <div class="col text-center">
-                    <h3>My Profile</h3>
-                </div>
-                <form method="POST" action="{% url 'user_address' %}"class="col-lg-12 border-custom rounded p-3 d-flex flex-column align-items-center">
+ {% block profilehead %} <h3>My Profile</h3> {% endblock profilehead %}
+             
+                {% block form %}
+                <form method="POST" action="{% url 'user_profile' %}"class="col-lg-12 border-custom rounded p-3 d-flex flex-column align-items-center">
                     {% csrf_token %}
                     
                     <div class="form-group col-11">
@@ -54,16 +18,14 @@
                         <label for="inputEmail">Email</label>
                         <input type="email" class="form-control custom-input" id="inputEmail" name="email" value="{{us.email}}">
                     </div>
-                    <button href="{% url 'user_address' %}" type="submit" class="btn btn-primary ">Submit</button>
+                    <button href="{% url 'user_profile' %}" type="submit" class="btn btn-primary ">Submit</button>
                 </form>
-            </div>
-        </div>
-    </div>
-    {% endblock corousel %}
+                {% endblock form %}
+          
     {% block right %}
-    <div class="row mt-5">
+    <!-- <div class="row mt-5">
    </div>
    <div class="row mt-5 ml-3" style="background-color:#D19C97;width:100%;height:80%;">
-</div>
+</div> -->
 
     {% endblock right %}
